Update job title in about.html

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
                         <h3>2025 - Present</h3>
-                        <h4>AI Consultant & MBA Candidate</h4>
+                        <h4>AI Consultant & Senior Manager of Strategy & Operations </h4>
                         <p>Launching AI consulting practice while completing MBA in Artificial Intelligence and Strategic Management at Villanova University</p>
                     </div>
                 </div>
