Update contact description for clarity

--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="contact-info-card">
                         <h3>Based in Boston, MA</h3>
-                        <p>Serving clients internationally with remote consulting services.</p>
+                        <p>Serving clients anywhere in the world with remote consulting services.</p>
                     </div>
                 </div>
             </div>
