Add 'Website Creation' to services list

--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@
                         <li>Custom AI Chatbot Development</li>
                         <li>Business Process Automation</li>
                         <li>AI Strategy & Implementation</li>
+                        <li>Website Creation</li>
                         <li>Training Video Creation</li>
                     </ul>
                 </div>
